23/01/2025 still have to debug it ,but this is better than ever